--- a/app/css/index.css
+++ b/app/css/index.css
@@ -66,8 +66,8 @@ label{
 	padding: 20px 0 20px 0;
 }
 
-	.btn-primary.disabled,
-	.btn-primary:disabled {
+	.btn-success.disabled,
+	.btn-success:disabled {
 		color: #000 !important;
 		background-color: #c7c7c7 !important;
 		border-color: #a5a5a5 !important;
