Added worker thread for processing files
Allows updating GUI with progress bar by running running file copy in worker window.

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -220,6 +220,15 @@ header h1 {
   
   /** MODAL STYLING **/
   
+  .modal-error .modal-content{
+	background-color: #ff4242;
+	color: #FFF;
+  }
+
+  .modal-error .close{
+	  color: #FFF;
+  }
+
   .modal-content {
 	border-radius: 0px;
 	box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
@@ -239,3 +248,71 @@ header h1 {
 	  }
 	}
   }
+
+
+
+
+
+
+#blah{
+	background: pink;
+}
+
+
+  .lds-ring {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	float: right;
+  }
+  .lds-ring div {
+	box-sizing: border-box;
+	display: block;
+	position: absolute;
+	width: 64px;
+	height: 64px;
+	margin: 8px;
+	border: 8px solid #4365E2;
+	border-radius: 50%;
+	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+	border-color: #4365E2 transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+	animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+	animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+	animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+	0% {
+	  transform: rotate(0deg);
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+  
+
+
+#processingProgressContainer{
+	margin: 20px 0 20px 0;
+	
+}
+	#processingProgressBackground {
+		background: #e9ecef;
+		height: 2px;
+	}
+
+	#processingProgressBar {
+		margin: -5px 0 0 0;
+		height: 8px;
+		background: #4365E2;
+	}
+
+	#processingProgressBarPercentage {
+		text-align: right;
+	}
