Updated renamer info to be clearer and consitent with uploader

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -36,6 +36,13 @@ label{
 	float: left;
 }
 
+abbr, acronym
+{
+	text-decoration: none;
+	border-bottom: .1em dotted;
+	cursor: help;
+}
+
 #pageHeader{
 	background: #4365E2;
 	padding: 20px 0 20px 0;
